--- a/meetup/templates/index.html
+++ b/meetup/templates/index.html
@@ -26,7 +26,7 @@
     </header>
     <section id="showcase">
         <div class="container">
-            <h1>WELCOME TO THE QUESTIONER </h1>
+            <h1>WELCOME TO THE ASKER </h1>
             <p>Post your questions before your Meetup!</p>
         </div>
 
