--- a/meetup/static/css/home.css
+++ b/meetup/static/css/home.css
@@ -1,145 +1,184 @@
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    line-height: 1.5;
-    margin: 0;
-    padding: 0;
-  }
-  /*container*/
-  .container{
-      width: 80%;
-      margin: auto;
-      overflow: hidden;
-  }
-  ul{
-      margin: 0;
-      padding: 0;
-  }
-  .blue{
-      padding: 15px;
-      background-color: #0000FF;
-      color: #ffffff;
-      margin-top: 10px;
-      margin-bottom: 10px;
-  }
-  /*header*/
-  header{
-      background-color: #f4f4f4;
-      padding-top: 30px;
-      min-height: 70px;
-      border-bottom: #0000FF 3px solid;
-  }
-  header a {
-      color: #000000;
-      text-decoration: none;
-      font-size: 16px;
-      }
-  
-  header li{
-      display: inline;
-      padding: 0 20px 0 20px;
-  }
-  header #branding{
-      float: left;
-  }
-  header #branding h1{
-      margin: 0;
-  }
-  header nav{
-      float: right;
-      margin-top: 10px;
-  }
-  header .highlight, header .current a{
-      color: #0000FF;
-      font-weight: bold;
-  
-  }
-  header a:hover{
-      color: #cccccc;
-      font-weight: bold;
-  }
- 
-ul#questions li{
-list-style: none;
-padding: 20px;
-border: #0000FF 1px solid;
-margin-bottom: 5px;
-background-color: #f4f4f4;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
 }
-ul#questions a{
-    text-decoration: none;
+/*container*/
+.container {
+  width: 80%;
+  margin: auto;
+  overflow: hidden;
 }
- article h1{
-     color: #0000FF;
-     text-align: center;
- }
- .posted_by{
-     font-style: italic;
-     font-size: 0.8em;
- }
- .upvote{
-     color: #0000FF;
- }
- .downvote{
-     color: #FF0000;
- }
-  /*buttons*/
-.button {
-    width: 20%;
-    background-color:#0000FF;
-    color: white;
-    padding: 5px 5px;
-    margin: 4px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  .post-btn{
-      float: right;
-      background-color: #0000FF;
-      color: #ffffff;
-      width: 30%;
-      cursor: pointer;
-      border: 3px solid;
-      margin-top: 10px;
-      margin-right:0;
-      padding: 10px 30px;
-      text-align: center;
-      
-  }
-.comment input[type="text"]{
-    width: 40%;
-    padding: 5px 5px;
-    margin: 4px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-aside#sidebar{
-    float: right;
-    width: 30%;
-    margin-top: 60px;
-    box-shadow: 0 4px 5px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    padding: 5px 5px;
-    position: relative;
-    margin-bottom: 130px;
-    margin-right: auto;
-    margin-left: auto;
-    
-  }
-aside#sidebar h3{
-    text-align: center;
-    margin-bottom: 10px;
-    color: #0000FF;
+ul {
+  margin: 0;
+  padding: 0;
+}
+.blue {
+  padding: 15px;
+  background-color: #0000ff;
+  color: #ffffff;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+/*header*/
+header {
+  background-color: #f4f4f4;
+  padding-top: 30px;
+  min-height: 70px;
+  border-bottom: #0000ff 3px solid;
+}
+header a {
+  color: #000000;
+  text-decoration: none;
+  font-size: 16px;
 }
 
-aside#sidebar textarea{
+header li {
+  display: inline;
+  padding: 0 20px 0 20px;
+}
+header #branding {
+  float: left;
+}
+header #branding h1 {
+  margin: 0;
+}
+header nav {
+  float: right;
+  margin-top: 10px;
+}
+header .highlight,
+header .current a {
+  color: #0000ff;
+  font-weight: bold;
+}
+header a:hover {
+  color: #cccccc;
+  font-weight: bold;
+}
+/* Dropdown-Menu*/
+.dropbtn {
+  background-color: #4caf50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
+ul#questions li {
+  list-style: none;
+  padding: 20px;
+  border: #0000ff 1px solid;
+  margin-bottom: 5px;
+  background-color: #f4f4f4;
+}
+ul#questions a {
+  text-decoration: none;
+}
+article h1 {
+  color: #0000ff;
+  text-align: center;
+}
+.posted_by {
+  font-style: italic;
+  font-size: 0.8em;
+}
+.upvote {
+  color: #0000ff;
+}
+.downvote {
+  color: #ff0000;
+}
+/*buttons*/
+.button {
+  width: 20%;
+  background-color: #0000ff;
+  color: white;
+  padding: 5px 5px;
+  margin: 4px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.post-btn {
+  float: right;
+  background-color: #0000ff;
+  color: #ffffff;
+  width: 30%;
+  cursor: pointer;
+  border: 3px solid;
+  margin-top: 10px;
+  margin-right: 0;
+  padding: 10px 30px;
+  text-align: center;
+}
+.comment input[type="text"] {
+  width: 40%;
+  padding: 5px 5px;
+  margin: 4px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+aside#sidebar {
+  float: right;
+  width: 30%;
+  margin-top: 60px;
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  padding: 5px 5px;
+  position: relative;
+  margin-bottom: 130px;
+  margin-right: auto;
+  margin-left: auto;
+}
+aside#sidebar h3 {
+  text-align: center;
+  margin-bottom: 10px;
+  color: #0000ff;
+}
+
+aside#sidebar textarea {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -150,44 +189,43 @@ aside#sidebar textarea{
   color: #000000;
 }
 .custom-select {
-    position: relative;
-    font-family: Arial;
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-article#main-col{
-      float: left;
-      width: 65%
-  }
-  @media(max-width:768px){
-      header #branding,
-      header nav,
-      header nav li,
-      article#main-col,
-      aside#sidebar{
-          float: none;
-          text-align: center;
-          width: 100%;
-      }
-      header{
-          padding-bottom: 20px;
-      }
-      #showcase h1{
-          margin-top: 40px;
-      }
-  }
+  position: relative;
+  font-family: Arial;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
 
-  footer{
-      padding: 20px;
-      margin-top: 20px;
-      text-align: center;
-      color: #ffffff;
-      background-color: #0000FF;
-      
+article#main-col {
+  float: left;
+  width: 65%;
+}
+@media (max-width: 768px) {
+  header #branding,
+  header nav,
+  header nav li,
+  article#main-col,
+  aside#sidebar {
+    float: none;
+    text-align: center;
+    width: 100%;
   }
+  header {
+    padding-bottom: 20px;
+  }
+  #showcase h1 {
+    margin-top: 40px;
+  }
+}
+
+footer {
+  padding: 20px;
+  margin-top: 20px;
+  text-align: center;
+  color: #ffffff;
+  background-color: #0000ff;
+}
