--- a/meetup/templates/registration/login.html
+++ b/meetup/templates/registration/login.html
@@ -29,6 +29,7 @@
         <form method="POST">
           {% csrf_token%}
          {{ form.as_p }}
+         <input type="hidden" name="next" value="{{next}}"/>
           <button type="submit" class="button">Login</button>
         </form>
         <p><a href="/reset">Forgot password?</a></p>
