Finish user validation/authentication

--- a/meetup/templates/home.html
+++ b/meetup/templates/home.html
@@ -51,7 +51,7 @@
                   class="dropdown-menu dropdown-menu-right"
                   aria-labelledby="userMenu"
                 >
-                  <a class="dropdown-item" href="#">My account</a>
+                  <a class="dropdown-item" href="{% url 'profile' %}">My account</a>
                   <a class="dropdown-item" href="#">Change password</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
