--- a/meetup/templates/edit_meetup.html
+++ b/meetup/templates/edit_meetup.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html>
 
 <head>
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Asker|User</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/admin.css">
+    <link rel="stylesheet" href="{% static 'css/admin.css' %}">
 </head>
 
 <body>
