--- a/meetup/templates/registration/login.html
+++ b/meetup/templates/registration/login.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Asker|Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/css/login.css" />
+    <link rel="stylesheet" href="{% static 'css/login.css' %}" />
   </head>
 
   <body>
@@ -17,7 +17,7 @@
         <nav>
           <ul>
             <li class="current"><a href="/">Home</a></li>
-            <li><a href="/register">SignUp</a></li>
+            <li><a href="{% url 'register' %}">SignUp</a></li>
             <li><a href="/admin">Admin</a></li>
           </ul>
         </nav>
@@ -35,7 +35,7 @@
         <p><a href="/reset">Forgot password?</a></p>
         <p>
           Not A Member Yet? Join Questioner Today
-          <a href="/register">SignUp</a>
+          <a href="{% url 'register' %}">SignUp</a>
         </p>
       </div>
     </section>
