--- a/meetup/templates/signup.html
+++ b/meetup/templates/signup.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Asker|SignUp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/css/signup.css" />
+    <link rel="stylesheet" href="{% static 'css/signup.css' %}" />
   </head>
 
   <body>
