--- a/meetup/templates/home.html
+++ b/meetup/templates/home.html
@@ -115,10 +115,10 @@
               <p>
                 <strong>Description:</strong> {{meetup.description|slice:":400"}}...
               </p>
-              <form action="edit_meetup.html">
+              <!--<form action="edit_meetup.html">
                 <button type="submit" class="button">Edit</button>
                 <button type="submit" class="button" disabled>Delete</button>
-              </form>
+              </form>-->
             </li>
             {% endfor %}
           </ul>
