Finish password reset

--- a/meetup/templates/home.html
+++ b/meetup/templates/home.html
@@ -52,7 +52,7 @@
                   aria-labelledby="userMenu"
                 >
                   <a class="dropdown-item" href="{% url 'profile' %}">My account</a>
-                  <a class="dropdown-item" href="#">Change password</a>
+                  <a class="dropdown-item" href="{% url 'reset_password' %}">Change password</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                 </div>
