--- a/meetup/templates/index.html
+++ b/meetup/templates/index.html
@@ -16,9 +16,9 @@
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="index.html">Home</a></li>
-                    <li><a href="/login">Login</a></li>
-                    <li><a href="/register">SignUp</a></li>
+                    <!--<li class="current"><a href="/">Home</a></li>-->
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                    <li><a href="{% url 'register' %}">SignUp</a></li>
                     <li><a href="/admin">Admin</a></li>
                 </ul>
             </nav>
