--- a/meetup/templates/password_reset.html
+++ b/meetup/templates/password_reset.html
@@ -17,9 +17,9 @@
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="index.html">Home</a></li>
+                    <li class="current"><a href="{% url 'home' %}">Home</a></li>
                    <!-- <li><a href="#login.html">Login</a></li>-->
-                    <li><a href="login.html">Login</a></li>
+                    <li><a href="{% url 'login' %}">Login</a></li>
                 </ul>
             </nav>
         </div>
@@ -27,9 +27,10 @@
     <section id="signup">
         <div class="container">
             <h1>Rest Password</h1>
-            <form action="login.html" method="POST">
-                <input type="email" placeholder="Enter email" name="email" required><br>
-                <button type="submit" class="button">Reset</button>
+            <form action="" method="POST">
+                {% csrf_token%}
+                {{form.as_p}}
+                <input type="submit" class="button" value="Save">
             </form>
 
         </div>
