--- a/meetup/templates/signup.html
+++ b/meetup/templates/signup.html
@@ -31,7 +31,7 @@
           {{ form.as_p }}
           <button type="submit" class="button">SignUp</button>
         </form>
-        <p>Already have an account? <a href="/login">Login</a></p>
+        <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
       </div>
     </section>
 
